[package]
name = "bitcoin_mass_address_generator"
version = "0.1.3"
edition = "2024"
authors = ["viraladmin <bc1qv5efj962zwesjtgcf8msxf3u3y3rmhxv4w2ckj>"]
description = "A high-performance multithreaded Bitcoin HD wallet address generator"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "wallet", "bip44", "bip49", "bip84", "bip86" "bip39", "cli", "hd-wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "data-structures", "development-tools", "encoding"]
repository = "https://github.com/viraladmin/bitcoin_mass_address_generator"
homepage = "https://github.com/viraladmin/bitcoin_mass_address_generator"
documentation="https://docs.rs/crate/bitcoin_mass_address_generator/0.1.2"

[dependencies]
bip39 = "2.0"
bitcoin = "0.31.2"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7" }
once_cell = "1.21.3"
bytes = "1"
futures = "0.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
